--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="{{ url_for('static', filename='/kevin.html') }}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -14,39 +14,54 @@
     <!-- Animate CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <title>Weather APP - Jose Cordova</title>
+    <title>Clima kevin </title>
+
+    <style>
+        .fondo{
+            background-color:rgb(222, 40, 153 );
+            text-emphasis-color: rgb(250, 255, 255);
+        }
+    </style>
 </head>
 
-<body style="background-color:rgb(100, 191, 243);">
-    <div class="container">
-        <br>
-        <br>
-        <h1 class="animate__animated animate__backInDown" style="text-align: center;">
-            Aplicacion para la consulta del Clima
-        </h1>
-        <br>
-        <form method="post">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" name="txtCiudad" id="txtCiudad"
-                    placeholder="Escriba el nombre de la ciudad que desea consultar el clima">
+<body class="fondo">
+    <div class="card border-success mb-3 fondo">
+    <!-- Header -->
+        <div class="card-header bg-transparent border-success fondo">
+                <br>
+                <br>
+                <center>
+                <div class="spinner-border text-danger text-lg-start fondo" role="status" >
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <h1 class="animate__animated animate__bounce h3 fondo" style="text-align: center;">
+                    Aplicacion del Clima
+                </h1>
+                <br>
+                <form method="post" class="fondo">
+                    <div class="input-group mb-3 fondo">
+                        <input type="text" class="form-control" name="txtCiudad" id="txtCiudad"
+                            placeholder="Escriba el nombre de la ciudad que desea consultar el clima">
+                    </div>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="bi bi-brightness-high"></i>
+                        Consulta el Clima
+                        <i class="bi bi-cloud-drizzle"></i>
+                    </button>               
+                    </center>
+                </form>
+                <br>
             </div>
-            <center>
-                <button type="submit" class="btn btn-primary">
-                    <i class="bi bi-brightness-high"></i>
-                    Consulta el Clima
-                    <i class="bi bi-cloud-drizzle"></i>
-                </button>
-            </center>
-        </form>
-        <br>
-
-        <!-- Carta del clima de la ciudad -->
+        </div>
         {% if cod == 200 %}
-        <div class="card animate__animated animate__backInLeft" style="width: 18rem;">
+        <center>
+        <div class="card animate__animated animate__backInLeft fondo" style="width: 18rem;">
             <img src="http://openweathermap.org/img/w/{{ icon }}.png" alt="icon">
             <!-- <img src="http://openweathermap.org/img/w/01n.png" class="card-img-top" alt="..."> -->
-            <div class="card-body">
+            <div class="card-body fondo">
                 <h4 class="card-title">{{ ciudad }}</h4>
+                <p class="card-text">Latitud : {{lat}} </p>
+                <p class="card-text">Longitud : {{lon}} </p>
                 <p class="card-text">Humedad : {{humedad}} </p>
                 <p class="card-text">Presion : {{presion}}</p>
                 <p class="card-text">Descripcion : {{descripcion}}</p>
@@ -54,19 +69,22 @@
             </div>
         </div>
         {% endif %}
-
         {% if cod == '404' %}
         <h1>Error</h1>
         {% endif %}
+        </center>
 
-
+        <br><br><br>
+        
+        <div class="card-footer bg-transparent border-success fondo">
+            <!-- Footer -->
+            <footer class="bg-info text-center text-lg-start fixed-bottom fondo">
+                <div class="text-center p-3">
+                    © 2024 Copyright:
+                    <a href="{{ url_for('kevin') }}" class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Kevin Sosa</a>
+                </div>
+            </footer>
+        </div>
     </div>
 </body>
-<footer class="bg-info text-center text-lg-start fixed-bottom">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2024 Copyright:
-        <a class="text-dark" href="https://ug.edu.ec/">Jose Saturnino Cordova Aragundi</a>
-    </div>
-</footer>
-
 </html>
